fixed worker overflow

--- a/src/Assets/css/styles.css
+++ b/src/Assets/css/styles.css
@@ -28,6 +28,9 @@ a, a:hover, a:focus {
     text-decoration: none;
     transition: all 0.3s;
 }
+.text-break {
+  word-break: break-all;
+}
 
 .navbar {
     border: none;
